<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/nav_chat" android:icon="@drawable/ic_assistente_ia" android:title="Chat" />
    <item android:id="@+id/nav_navegador" android:icon="@drawable/ic_open_external" android:title="Navegador" />
    <item android:id="@+id/nav_brain" android:icon="@drawable/ic_ai_brain" android:title="Brain" />
    <item android:id="@+id/nav_prompts" android:icon="@drawable/ic_criador_prompts" android:title="Prompts" />
    <item android:id="@+id/nav_projects" android:icon="@drawable/ic_projects" android:title="Projetos" />
    <item android:id="@+id/nav_public_apis" android:icon="@drawable/ic_public_apis" android:title="Public APIs" />
</menu>
