...
        android:layout_height="2dp"
        android:indeterminate="true"
        android:indeterminateTint="@color/secondary"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerAbasBrowser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/surface_container_high"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_aba_navegador" />

    <FrameLayout
        android:id="@+id/containerWebViewBrowser"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>

