...
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_md"
            android:hint="@string/brain_hint_pergunta"
            app:boxBackgroundColor="@color/surface">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editPergunta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/on_background"
                android:imeOptions="actionSearch"
                android:inputType="text" />

...
            android:layout_marginStart="16dp"
            android:layout_marginTop="@dimen/space_sm"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnPerguntar"
                style="@style/Widget.AIBrain.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/secondary"
                android:enabled="false"
                android:text="@string/brain_botao_perguntar"
...
