...
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_md"
                android:layout_marginTop="@dimen/space_sm"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnAbrirColecoes"
                    style="@style/Widget.AIBrain.Button.Outlined"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/atalho_colecoes"
                    android:textSize="12sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnAbrirGuias"
                    style="@style/Widget.AIBrain.Button.Outlined"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/space_sm"
                    android:layout_weight="1"
                    android:text="@string/atalho_guias"
...
